# pooly

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml
.github/workflows/: rust.yml
python/: payloads_pb2.py  test_client.py  unseal.py
src/: lib.rs  main.rs  payloads.proto
src/connections/: mod.rs
src/data/: dao.rs  db.rs  files.rs  mod.rs
src/middleware/auth/: api_key.rs  jwt.rs
src/models/: access.rs  app.rs  connections.rs  convert.rs  errors.rs  jwt.rs  keys.rs  mod.rs  parameters.rs  responses.rs  roles.rs  rows.rs  secrets.rs  time.rs  tokens.rs  trie.rs  updatable.rs  versioned.rs  wildcards.rs
src/models/auth/: access.rs  api_key.rs  jwt.rs  mod.rs  roles.rs
src/models/query/: connections.rs  mod.rs  parameters.rs  rows.rs
src/models/sec/: mod.rs  secrets.rs  zeroize.rs
src/models/utils/: mod.rs  time.rs  wildcards.rs
src/models/ver/: mod.rs  updatable.rs  versioned.rs
src/models/versioning/: updatable.rs  versioned.rs
src/queries/: mod.rs
src/resources/: configs.rs  connections.rs  mod.rs  query.rs  secrets.rs  shares.rs
src/resources/access/: literal_ids.rs  mod.rs  pattern_ids.rs
src/resources/connections/: mod.rs
src/resources/connections/access/: literal_ids.rs  mod.rs  pattern_ids.rs
src/resources/keys/: mod.rs
src/resources/secrets/: actions.rs  mod.rs  shares.rs
src/services/: clock.rs  mod.rs  updatable.rs
src/services/auth/: access.rs  authentication.rs  connection_ids.rs  connections.rs  identity.rs  initialization.rs  jwt.rs  middleware.rs  mod.rs  request.rs  tokens.rs
src/services/connections/: access.rs  config.rs  mod.rs
src/services/initialize/: mod.rs
src/services/limits/: mod.rs
src/services/queries/: mod.rs
src/services/secrets/: encryption.rs  files.rs  generate.rs  mod.rs  random.rs  shares.rs
src/values/: convert.rs  payloads.rs
tests/: common.rs  queries.rs  simple_queries.rs  types.rs  write_read_queries.rs
