[package]
name = "pooly"
version = "0.2.1"
edition = "2021"
authors = ["P. Gli <pgli@pm.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mrrabbitte/pooly"
homepage = "https://github.com/mrrabbitte/pooly"
description = "A protobuf to Postgres adapter + connection pooling middleware."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-protobuf = "0.9.0"
actix-utils = "3.0.0"
base64 = "0.21.0"
bincode = "1.3.3"
bytes = "1.1.0"
chacha20poly1305 = "0.10.1"
config = "0.13.1"
dashmap = "5.4.0"
deadpool = "0.9.2"
deadpool-postgres = "0.10.1"
futures-util = "0.3.21"
hmac = { version = "0.12", features = ["reset"] }
jwt = {version = "0.16.0", features = ["openssl"]}
openssl = "0.10.38"
postgres-types = "0.2.2"
prost = "0.11.9"
tokio-postgres = "0.7.5"
tokio-postgres-rustls = "0.10.0"
ring = "0.16.20"
rustls = "0.21.0"
serde = "1.0"
sha2 = "0.10.2"
sharks = {version = "0.5.0", features = ["fuzzing", "zeroize", "zeroize_memory"]}
sled = "0.34.7"
uuid = {version = "1.0.0-alpha.1", features = ["v4"]}
zeroize = {version = "1.5.6", features = ["zeroize_derive"]}

[build-dependencies]
prost-build = "0.11.9"

[dev-dependencies]
derivative = "2.2.0"
mockall = "0.11.1"
pretty_env_logger = "0.4.0"
proptest = "1.0.0"
serde_json = "1.0"
testcontainers = "0.14.0"
tokio = { version = "1.16.1", features = [ "macros" ] }
